--- a/DATABASE/SolarDB/templates/register.html
+++ b/DATABASE/SolarDB/templates/register.html
@@ -1,8 +1,10 @@
+{% load static %}
+<!DOCTYPE html>
 <html>
 <head>
-	<link href="bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-	<link href="stylecss.css" rel="stylesheet" >
-	<script src="login.js"></script>
+	<link href="{% static 'css/bootstrap.min.css' %}"rel="stylesheet" id="bootstrap-css">
+	<link href="{% static 'css/stylecss.css' %}" rel="stylesheet" >
+	<link href="{% static 'css/stylecss.css' %}" rel="stylesheet" >
 </head>
 <!------ Include the above in your HEAD tag ---------->
 
