login/register fix
adapted to django

--- a/DATABASE/SolarDB/templates/register.html
+++ b/DATABASE/SolarDB/templates/register.html
@@ -20,7 +20,7 @@
 					<div class="panel-heading">
 						<div class="row">
 							<div class="col-xs-6">
-								<a href="login.html" id="login-form-link">Login</a>
+								<a href="/" id="login-form-link">Login</a>
 							</div>
 							<div class="col-xs-6">
 								<a href="#" class="active" id="register-form-link">Register</a>
