--- a/DATABASE/SolarDB/templates/login.html
+++ b/DATABASE/SolarDB/templates/login.html
@@ -23,7 +23,7 @@
 								<a href="#" class="active" id="login-form-link">Login</a>
 							</div>
 							<div class="col-xs-6">
-								<a href="register.html" id="register-form-link">Register</a>
+								<a href="/register" id="register-form-link">Register</a>
 							</div>
 						</div>
 						<hr>
