--- a/DATABASE/SolarDB/templates/register.html
+++ b/DATABASE/SolarDB/templates/register.html
@@ -10,7 +10,7 @@
 
 <body>
 <div align="center">
-	<img src="Solar-Philippines-Logo.png" class="login-logo">
+	<img src="{% static 'media/solarpic.png' %}" class="login-logo">
 </div>
 
 <div class="container">
@@ -31,22 +31,21 @@
 					<div class="panel-body">
 						<div class="row">
 							<div class="col-lg-12">
-								<form id="login-form" action="login.html" method="post" role="form" style="display: block;">
+								<form id="login-form" action="#" method="POST" role="form" style="display: block;">
 									<div class="form-group">
-										<input type="text" name="username" id="username" tabindex="1" class="form-control" placeholder="Username" value="">
+										<input type="text" name="username" id="username" tabindex="1" class="form-control" placeholder="Username" value="" required>
+                                    </div>
+									<div class="form-group">
+										<input type="password" name="password" id="password" tabindex="2" class="form-control" placeholder="Password" required>
 									</div>
 									<div class="form-group">
-										<input type="email" name="email" id="email" tabindex="1" class="form-control" placeholder="Email Address" value="">
-									</div>
-									<div class="form-group">
-										<input type="password" name="password" id="password" tabindex="2" class="form-control" placeholder="Password">
-									</div>
-									<div class="form-group">
-										<input type="password" name="confirm-password" id="confirm-password" tabindex="2" class="form-control" placeholder="Confirm Password">
+										<input type="password" name="confirm-password" id="confirm-password" tabindex="2" class="form-control" placeholder="Confirm Password" required>
 									</div>
 									<div class="form-group">
 										<div class="row">
 											<div class="col-sm-6 col-sm-offset-3">
+                                                <input type="hidden" name="register" value="true" required>
+                                                {% csrf_token %}
 												<input type="submit" name="register-submit" id="register-submit" tabindex="4" class="form-control btn btn-register" value="Register Now">
 											</div>
 										</div>
