--- a/DATABASE/SolarDB/static/css/stylecss.css
+++ b/DATABASE/SolarDB/static/css/stylecss.css
@@ -142,9 +142,68 @@ button, .topnav input[type=text] {
     border-width: 1px;
 }
 
-.login-logo{
+.home-logo, .login-logo{
 	text-align: center;
 	height: 100px;
 	margin: 50px;
 }
+
+/***** HOME PAGE *****/
+
+.homepage-container{
+	text-align: center;
+	padding-bottom: 50px;
+	width: 500px;
+	margin-left: 33%;
+	margin-top: 100px;
+	border-style: solid;
+	border-width: 1px;
+	box-shadow: 5px 10px #888888;
+}
+
+/* Dropdown Button */
+.dropbtn {
+    background-color: #3498DB;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+}
+
+/* Dropdown button on hover & focus */
+.dropbtn:hover, .dropbtn:focus {
+    background-color: #2980B9;
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {background-color: #ddd}
+
+/* Show the dropdown menu (use JS to add this class to the .dropdown-content 
+container when the user clicks on the dropdown button) */
+.show {display:block;}
 
