--- a/DATABASE/SolarDB/templates/homepage.html
+++ b/DATABASE/SolarDB/templates/homepage.html
@@ -2,12 +2,14 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <title>SOLAR DATABASE</title>
 	<link href="{% static 'css/bootstrap.min.css' %}"rel="stylesheet" id="bootstrap-css">
 	<link href="{% static 'css/stylecss.css' %}" rel="stylesheet" >
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
+
 <div class="home-main">
 	<div class="homepage-container">
 		<img src="{% static 'media/solarpic.png' %}" class="home-logo">
