--- a/DATABASE/SolarDB/static/css/stylecss.css
+++ b/DATABASE/SolarDB/static/css/stylecss.css
@@ -145,65 +145,67 @@ button, .topnav input[type=text] {
 .home-logo, .login-logo{
 	text-align: center;
 	height: 100px;
-	margin: 50px;
+	margin: 40px;
+}
+
+body.login-container{
+	background-image: url("login-bg.jpg");
+	background-size: cover;
+	width: 100%;
+	height: 75%;
+	margin-top: 0px;
 }
 
 /***** HOME PAGE *****/
+body.home-main{
+	background-image: url("panel-bg.png");
+	background-size: cover;
+	width: 100%;
+	height: 75%;
+	margin-top: 0px;
+}
 
 .homepage-container{
 	text-align: center;
 	padding-bottom: 50px;
+	background-color: white;
 	width: 500px;
 	margin-left: 33%;
 	margin-top: 100px;
 	border-style: solid;
 	border-width: 1px;
-	box-shadow: 5px 10px #888888;
+	box-shadow: 5px 10px black;
 }
 
-/* Dropdown Button */
-.dropbtn {
-    background-color: #3498DB;
-    color: white;
-    padding: 16px;
-    font-size: 16px;
-    border: none;
-    cursor: pointer;
+.logout-home{
+	width: 100%;
+	text-align: right;
+	padding-top: 15px;
+	padding-right: 20px;
 }
 
-/* Dropdown button on hover & focus */
-.dropbtn:hover, .dropbtn:focus {
-    background-color: #2980B9;
+.logout-home-button{
+	padding-top: 5px;
+	padding-bottom: 5px;
+	padding-left: 10px;
+	padding-right: 10px;
+	border-style: solid;
+	border-width: 2px;
+	border-color: orange;
+	border-radius: 25px;
 }
 
-/* The container <div> - needed to position the dropdown content */
-.dropdown {
-    position: relative;
-    display: inline-block;
+.logout-home-button:hover{
+	padding-top: 5px;
+	padding-bottom: 5px;
+	padding-left: 10px;
+	padding-right: 10px;
+	border-style: solid;
+	border-width: 2px;
+	border-color: orange;
+	border-radius: 25px;
+	background-color: orange;
+	color: white;
+	text-decoration: none;
 }
-
-/* Dropdown Content (Hidden by Default) */
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f1f1f1;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-}
-
-/* Links inside the dropdown */
-.dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-}
-
-/* Change color of dropdown links on hover */
-.dropdown-content a:hover {background-color: #ddd}
-
-/* Show the dropdown menu (use JS to add this class to the .dropdown-content 
-container when the user clicks on the dropdown button) */
-.show {display:block;}
 
