--- a/DATABASE/SolarDB/templates/homepage.html
+++ b/DATABASE/SolarDB/templates/homepage.html
@@ -2,24 +2,35 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>SOLAR DATABASE</title>
 	<link href="{% static 'css/bootstrap.min.css' %}"rel="stylesheet" id="bootstrap-css">
 	<link href="{% static 'css/stylecss.css' %}" rel="stylesheet" >
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
-<body>
-
-<div class="home-main">
+<body class="home-main">
 	<div class="homepage-container">
-		<img src="{% static 'media/solarpic.png' %}" class="home-logo">
-		<form action="displaysales.html">
-			<input type="submit" value="Display Sales Properties" class="btn btn-primary btn-lg"/>
-		</form>
-		<form action="displaysales.html">
-			<input type="submit" value="Display Lease Properties" class="btn btn-primary btn-lg"/>
-		</form>
+        <b>Welcome, {{loggeduser.username}}</b>
+		<div class="logout-home">
+			<b><a href="/" class="logout-home-button">Log out</a></b>
+		</div>
+			<img src = "{% static 'media/solarpic.png' %}" class="home-logo">
+			<form action="displaysales.html">
+				<input type="submit" value="Display Sales Properties" class="btn btn-primary btn-lg"/>
+			</form>
+			<form action="displaysales.html">
+				<input type="submit" value="Display Lease Properties" class="btn btn-primary btn-lg"/>
+			</form>
+            {% if loggeduser.accountType == 1 %}
+            <form action="displaysales.html">
+			     <input type="submit" value="Edit Sales Properties" class="btn btn-primary btn-lg"/>
+		    </form>
+        
+            <form action="displaysales.html">
+			     <input type="submit" value="Edit Lease Properties" class="btn btn-primary btn-lg"/>
+		    </form>
+            {% elif loggeduser.accountType == 0 %}
+        
+            {%endif%}
 	</div>
-</div>
 </body>
 </html>
