--- a/DATABASE/SolarDB/templates/homepage.html
+++ b/DATABASE/SolarDB/templates/homepage.html
@@ -9,7 +9,7 @@
 
 <body class="home-main">
 	<div class="homepage-container">
-        <b>Welcome, {{loggeduser.username}}</b>
+        <b id = "sessionUser">Welcome, {{loggeduser.username}}</b>
 		<div class="logout-home">
 			<b><a href="/" class="logout-home-button">Log out</a></b>
 		</div>
