--- a/DATABASE/SolarDB/static/css/stylecss.css
+++ b/DATABASE/SolarDB/static/css/stylecss.css
@@ -209,3 +209,15 @@ body.home-main{
 	text-decoration: none;
 }
 
+#sessionUser{
+    position: relative;
+    left:-145px;
+    top:35px;
+    padding-top: 5px;
+	padding-bottom: 5px;
+	padding-left: 10px;
+	padding-right: 10px;
+	color: black;
+	text-decoration: none;
+    
+}
