--- a/DATABASE/SolarDB/templates/lease_form.html
+++ b/DATABASE/SolarDB/templates/lease_form.html
@@ -1,21 +1,27 @@
+{% load static %}
+<!DOCTYPE html>
 <html>
 <head>
-	<link href="bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-	<link href="stylecss.css" rel="stylesheet" >
+	<link href="{% static 'css/bootstrap.min.css' %}"rel="stylesheet" id="bootstrap-css">
+	<link href="{% static 'css/stylecss.css' %}" rel="stylesheet" >
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/png" href="{% static 'media/solar-titlebar.png' %}" />
+    <title>Lease Properties Form</title>
 </head>
 <!------ Include the above in your HEAD tag ---------->
 
 <body>
+    {% csrf_token %}
 		<div class="topnav">
-			<img src="Solar-Philippines-Logo.png" class="topnav-logo">
+			<img src="{% static 'media/solarpic.png' %}" class="topnav-logo">
 			<button>Submit</button>
 			<input type="text" placeholder="Search">
 		</div>
 <div class="container">
   <h1>Lease Properties</h1>
-  <form class="form-horizontal" role="form">
+  <form class="form-horizontal" role="form" action="#" method="POST">
     <fieldset>
-      <legend>Location Details</legend>
+      <legend class="form-legend">Location Details</legend>
       <div class="form-group">
         <label class="col-sm-3 control-label">Region</label>
         <div class="col-sm-5">
@@ -46,7 +52,7 @@
     </fieldset>
 	
 	<fieldset>
-      <legend>Property Owner's Details</legend>
+      <legend class="form-legend">Property Owner's Details</legend>
       <div class="form-group">
         <label class="col-sm-3 control-label">Registered Land Owner</label>
         <div class="col-sm-5">
@@ -70,24 +76,24 @@
       
 	  <div class="form-group">
         <label class="col-sm-3 control-label">Contact Number</label>
-        <div class="col-sm-5">
+        <div class="col-sm-3">
           <input type="text" class="form-control" name="contactnumber" id="contactnumber" placeholder="Contact Number">
         </div>
       </div>
     </fieldset>
 	
 	<fieldset>
-      <legend>Property Details</legend>
+      <legend class="form-legend">Property Details</legend>
       <div class="form-group">
         <label class="col-sm-3 control-label">Title Number</label>
-        <div class="col-sm-5">
+        <div class="col-sm-3">
           <input type="text" class="form-control" name="titlenumber" id="titlenumber" placeholder="Title Number">
         </div>
       </div>
 	  
       <div class="form-group">
         <label class="col-sm-3 control-label">Lot Number</label>
-        <div class="col-sm-5">
+        <div class="col-sm-3">
           <input type="text" class="form-control" name="lotnumber" id="lotnumber" placeholder="Lot Number">
         </div>
       </div>
@@ -101,14 +107,14 @@
       
 	  <div class="form-group">
         <label class="col-sm-3 control-label">Survey Number</label>
-        <div class="col-sm-5">
+        <div class="col-sm-3">
           <input type="text" class="form-control" name="surveynumber" id="surveynumber" placeholder="Survey Number">
         </div>
       </div>
     </fieldset>
 	
 	<fieldset>
-      <legend>Payment Details</legend>
+      <legend class="form-legend">Payment Details</legend>
       <div class="form-group">
         <label class="col-sm-3 control-label">Lease Price Per Hectare</label>
         <div class="col-sm-3">
@@ -125,109 +131,102 @@
     </fieldset>
 	
 	<fieldset>
-      <legend>Released Payments</legend>
+      <legend class="form-legend">Released Payments</legend>
       <div class="form-group">
         <label class="col-sm-3 control-label">Advance Payment</label>
-        <div class="col-sm-3">
-          <input type="text" class="form-control" name="advancepayment_amount" id="advancepayment_amount" placeholder="Amount Released">
-		  <input type="text" class="form-control" name="advancepayment_date" id="advancepayment_date" placeholder="Date Released">
+        <div class="col-sm-5">
+          <input type="text" class="form-control-amount" name="advancepayment_amount" id="advancepayment_amount" placeholder="Amount Released">
+		  <input type="date" class="form-control-date" name="advancepayment_date" id="advancepayment_date" placeholder="Date Released">
         </div>
       </div>
 	  
 	  <div class="form-group">
         <label class="col-sm-3 control-label">YEAR 1-5</label>
-        <div class="col-sm-3">
-          <input type="text" class="form-control" name="y1-5_amount" id="y1-5_amount" placeholder="Amount Released">
-		  <input type="text" class="form-control" name="y1-5_date" id="y1-5_date" placeholder="Date Released">
+        <div class="col-sm-5">
+          <input type="text" class="form-control-amount" name="y1-5_amount" id="y1-5_amount" placeholder="Amount Released">
+		  <input type="date" class="form-control-date" name="y1-5_date" id="y1-5_date" placeholder="Date Released">
         </div>
       </div>
 	  <div class="form-group">
         <label class="col-sm-3 control-label">YEAR 6-10</label>
-        <div class="col-sm-3">
-          <input type="text" class="form-control" name="y6-10_amount" id="y6-10_amount" placeholder="Amount Released">
-		  <input type="text" class="form-control" name="y6-10_date" id="y6-10_date" placeholder="Date Released">
+        <div class="col-sm-5">
+          <input type="text" class="form-control-amount" name="y6-10_amount" id="y6-10_amount" placeholder="Amount Released">
+		  <input type="date" class="form-control-date" name="y6-10_date" id="y6-10_date" placeholder="Date Released">
         </div>
       </div>
 	  <div class="form-group">
         <label class="col-sm-3 control-label">YEAR 11-15</label>
-        <div class="col-sm-3">
-          <input type="text" class="form-control" name="y11-15_amount" id="y11-15_amount" placeholder="Amount Released">
-		  <input type="text" class="form-control" name="y11-15_date" id="y11-15_date" placeholder="Date Released">
+        <div class="col-sm-5">
+          <input type="text" class="form-control-amount" name="y11-15_amount" id="y11-15_amount" placeholder="Amount Released">
+		  <input type="date" class="form-control-date" name="y11-15_date" id="y11-15_date" placeholder="Date Released">
         </div>
       </div>
 	  <div class="form-group">
         <label class="col-sm-3 control-label">YEAR 16-20</label>
-        <div class="col-sm-3">
-          <input type="text" class="form-control" name="y16-20_amount" id="y16-20_amount" placeholder="Amount Released">
-		  <input type="text" class="form-control" name="y16-20_date" id="y16-20_date" placeholder="Date Released">
+        <div class="col-sm-5">
+          <input type="text" class="form-control-amount" name="y16-20_amount" id="y16-20_amount" placeholder="Amount Released">
+		  <input type="date" class="form-control-date" name="y16-20_date" id="y16-20_date" placeholder="Date Released">
         </div>
       </div>
 	  <div class="form-group">
         <label class="col-sm-3 control-label">YEAR 21-25</label>
-        <div class="col-sm-3">
-          <input type="text" class="form-control" name="y21-25_amount" id="y21-25_amount" placeholder="Amount Released">
-		  <input type="text" class="form-control" name="y21-25_date" id="y21-25_date" placeholder="Date Released">
+        <div class="col-sm-5">
+          <input type="text" class="form-control-amount" name="y21-25_amount" id="y21-25_amount" placeholder="Amount Released">
+		  <input type="date" class="form-control-date" name="y21-25_date" id="y21-25_date" placeholder="Date Released">
         </div>
       </div>
 	  <div class="form-group">
         <label class="col-sm-3 control-label">YEAR 26-30</label>
-        <div class="col-sm-3">
-          <input type="text" class="form-control" name="y26-30_amount" id="y26-30_amount" placeholder="Amount Released">
-		  <input type="text" class="form-control" name="y26-30_date" id="y26-30_date" placeholder="Date Released">
+        <div class="col-sm-5">
+          <input type="text" class="form-control-amount" name="y26-30_amount" id="y26-30_amount" placeholder="Amount Released">
+		  <input type="date" class="form-control-date" name="y26-30_date" id="y26-30_date" placeholder="Date Released">
         </div>
       </div>
     </fieldset>
 	
 	<fieldset>
-      <legend>Taxes and Registration Fees</legend>
+      <legend class="form-legend">Taxes and Registration Fees</legend>
       <div class="form-group">
         <label class="col-sm-3 control-label">CGT</label>
-        <div class="col-sm-3">
-          <input type="text" class="form-control" name="cgt_amount" id="cgt_amount" placeholder="Amount Released">
-		  <input type="text" class="form-control" name="cgt_date" id="cgt_date" placeholder="Date Released">
+        <div class="col-sm-5">
+          <input type="text" class="form-control-amount" name="cgt_amount" id="cgt_amount" placeholder="Amount Released">
         </div>
       </div>
 	  
 	  <div class="form-group">
         <label class="col-sm-3 control-label">DST</label>
-        <div class="col-sm-3">
-          <input type="text" class="form-control" name="dst_amount" id="dst_amount-5_amount" placeholder="Amount Released">
-		  <input type="text" class="form-control" name="dst_date" id="dst_date-5_date" placeholder="Date Released">
+        <div class="col-sm-5">
+          <input type="text" class="form-control-amount" name="dst_amount" id="dst_amount-5_amount" placeholder="Amount Released">
         </div>
       </div>
 	  <div class="form-group">
         <label class="col-sm-3 control-label">Trasnfer Fees</label>
-        <div class="col-sm-3">
-          <input type="text" class="form-control" name="transferfees_amount" id="y6-transferfees_amount" placeholder="Amount Released">
-		  <input type="text" class="form-control" name="transferfees_date" id="transferfees_date-10_date" placeholder="Date Released">
+        <div class="col-sm-5">
+          <input type="text" class="form-control-amount" name="transferfees_amount" id="y6-transferfees_amount" placeholder="Amount Released">
         </div>
       </div>
 	  <div class="form-group">
         <label class="col-sm-3 control-label">LRA Fee</label>
-        <div class="col-sm-3">
-          <input type="text" class="form-control" name="lrafee_amount" id="lrafee_amount-15_amount" placeholder="Amount Released">
-		  <input type="text" class="form-control" name="lrafee_date" id="y11lrafee_date15_date" placeholder="Date Released">
+        <div class="col-sm-5">
+          <input type="text" class="form-control-amount" name="lrafee_amount" id="lrafee_amount-15_amount" placeholder="Amount Released">
         </div>
       </div>
 	  <div class="form-group">
         <label class="col-sm-3 control-label">I.T Fee</label>
-        <div class="col-sm-3">
-          <input type="text" class="form-control" name="itfee_amount" id="y16itfee_amount20_amount" placeholder="Amount Released">
-		  <input type="text" class="form-control" name="itfee_date" id="itfee_date" placeholder="Date Released">
+        <div class="col-sm-5">
+          <input type="text" class="form-control-amount" name="itfee_amount" id="y16itfee_amount20_amount" placeholder="Amount Released">
         </div>
       </div>
 	  <div class="form-group">
         <label class="col-sm-3 control-label">LBP</label>
-        <div class="col-sm-3">
-          <input type="text" class="form-control" name="lbp_amount" id="y21-lbp_amount" placeholder="Amount Released">
-		  <input type="text" class="form-control" name="lbp_date" id="lbp_date" placeholder="Date Released">
+        <div class="col-sm-5">
+          <input type="text" class="form-control-amount" name="lbp_amount" id="y21-lbp_amount" placeholder="Amount Released">
         </div>
       </div>
 	  <div class="form-group">
         <label class="col-sm-3 control-label">Notarial Fee</label>
-        <div class="col-sm-3">
-          <input type="text" class="form-control" name="notarialfee_amount" id="y26-notarialfee_amount" placeholder="Amount Released">
-		  <input type="text" class="form-control" name="notarialfee_date" id="notarialfee_date-30_date" placeholder="Date Released">
+        <div class="col-sm-5">
+          <input type="text" class="form-control-amount" name="notarialfee_amount" id="y26-notarialfee_amount" placeholder="Amount Released">
         </div>
       </div>
 	  
@@ -235,6 +234,8 @@
 	  
 	  <div class="form-group">
         <div class="col-sm-offset-3 col-sm-9">
+            {% csrf_token %}
+            <input type="hidden" name="addproperty" value="true" required>
           <input type="submit" class="btn btn-success">
         </div>
       </div>
