--- a/DATABASE/SolarDB/templates/displaysales.html
+++ b/DATABASE/SolarDB/templates/displaysales.html
@@ -1,7 +1,13 @@
+{% load static %}
+<!DOCTYPE html>
 <html>
-        
-	<link rel="stylesheet" href="stylesolar.css">
-	<title> LOGIN </title>
+<head>
+	<link href="{% static 'css/bootstrap.min.css' %}"rel="stylesheet" id="bootstrap-css">
+	<link href="{% static 'css/stylecss.css' %}" rel="stylesheet" >
+    <link rel="icon" type="image/png" href="{% static 'media/solar-titlebar.png' %}" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Sales Properties Summary</title>
+</head> 
 
     <body background="imgs/bg4.JPG">
    
@@ -71,7 +77,61 @@
 					<th>Notorial Fee(1%)</th>
 					
 				  </tr>
-				 
+                    {% for property  in all_properties%}
+                     <tr>
+					<td> </td>
+					<td> {{ property.region}}</td>
+                    <td> {{ property.province}}</td>
+                    <td> {{ property.municipality}}</td>
+                    <td> {{ property.barangay}}</td>
+                    <td> {{ property.regLandOwner}}</td>   
+                    <td> {{ property.Payee}}</td>
+                    <td> {{ property.titleNum}}</td> 
+                    <td> {{ property.areaHectares}}</td>
+                    <td> {{ property.pricePerHectare}}</td>
+                       <td> </td>  
+                    <td> {{ property.firstPayAmount}}</td>
+                    <td> {{ property.firstPayDate}}</td>
+                    <td> {{ property.secPayAmount}}</td>
+                    <td> {{ property.secPayDate}}</td>
+                    <td> {{ property.thirdPayAmount}}</td>
+                    <td> {{ property.thirdPayDate}}</td>
+                    <td> {{ property.fourthPayAmount}}</td>
+                    <td> {{ property.fourthPayDate}}</td>
+                    <td> {{ property.fifthPayAmount}}</td>
+                    <td> {{ property.fifthPayDate}}</td>
+                         
+                    <td> {{ property.sixthPayAmount}}</td>
+                    <td> {{ property.sixthPayDate}}</td>
+                    <td> {{ property.seventhPayAmount}}</td>
+                    <td> {{ property.seventhPayDate}}</td>
+    
+                    <td> {{ property.eigthPayAmount}}</td>
+                    <td> {{ property.eigthPayDate}}</td>
+                    <td> {{ property.ninthPayAmount}}</td>
+                    <td> {{ property.ninthPayDate}}</td>
+                    <td> {{ property.tenthPayAmount}}</td>
+                    <td> {{ property.tenthPayDate}}</td>    
+                         
+                    <td> {{ property.releasedPayment}}</td>    
+                    <td> {{ property.balance}}</td>    
+                    
+                    <td> {{ property.BIRcgt}}</td>    
+                    <td> {{ property.BIRdst}}</td>  
+                    <td> {{ property.LGUtransfer}}</td>    
+                    <td> {{ property.RODlra}}</td>  
+                    <td></td>
+                    <td></td>
+                    <td> {{ property.SUMother}}</td>    
+                    <td> {{ property.TAXother}}</td> 
+                    <td> {{ property.RODit}}</td>    
+                    <td> {{ property.OTHERSnotorial}}</td> 
+                   
+                         
+					
+					
+				  </tr>
+				 {% endfor%}
 				  
 				  
 				  
