--- a/DATABASE/SolarDB/templates/homepage.html
+++ b/DATABASE/SolarDB/templates/homepage.html
@@ -4,29 +4,31 @@
 <head>
 	<link href="{% static 'css/bootstrap.min.css' %}"rel="stylesheet" id="bootstrap-css">
 	<link href="{% static 'css/stylecss.css' %}" rel="stylesheet" >
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/png" href="{% static 'media/solar-titlebar.png' %}" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Home: Admin</title>
 </head>
 
 <body class="home-main">
 	<div class="homepage-container">
-        <b id = "sessionUser">Welcome, {{loggeduser.username}}</b>
+        <b>Welcome, {{loggeduser.username}}</b>
 		<div class="logout-home">
 			<b><a href="/" class="logout-home-button">Log out</a></b>
 		</div>
 			<img src = "{% static 'media/solarpic.png' %}" class="home-logo">
-			<form action="displaysales.html">
+			<form action="salesview">
 				<input type="submit" value="Display Sales Properties" class="btn btn-primary btn-lg"/>
 			</form>
-			<form action="displaysales.html">
+			<form action="leaseview">
 				<input type="submit" value="Display Lease Properties" class="btn btn-primary btn-lg"/>
 			</form>
             {% if loggeduser.accountType == 1 %}
-            <form action="displaysales.html">
-			     <input type="submit" value="Edit Sales Properties" class="btn btn-primary btn-lg"/>
+            <form action="salesform">
+			     <input type="submit" value="Add Sales Properties" class="btn btn-primary btn-lg"/>
 		    </form>
         
-            <form action="displaysales.html">
-			     <input type="submit" value="Edit Lease Properties" class="btn btn-primary btn-lg"/>
+            <form action="leaseregister">
+			     <input type="submit" value="Add Lease Properties" class="btn btn-primary btn-lg"/>
 		    </form>
             {% elif loggeduser.accountType == 0 %}
         
