--- a/DATABASE/SolarDB/templates/register.html
+++ b/DATABASE/SolarDB/templates/register.html
@@ -4,7 +4,9 @@
 <head>
 	<link href="{% static 'css/bootstrap.min.css' %}"rel="stylesheet" id="bootstrap-css">
 	<link href="{% static 'css/stylecss.css' %}" rel="stylesheet" >
-	<link href="{% static 'css/stylecss.css' %}" rel="stylesheet" >
+	<link rel="icon" type="image/png" href="{% static 'media/solar-titlebar.png' %}" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Register</title>
 </head>
 <!------ Include the above in your HEAD tag ---------->
 
