--- a/DATABASE/SolarDB/templates/sales_form.html
+++ b/DATABASE/SolarDB/templates/sales_form.html
@@ -1,21 +1,26 @@
+{% load static %}
+<!DOCTYPE html>
 <html>
 <head>
-	<link href="bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-	<link href="stylecss.css" rel="stylesheet" >
+	<link href="{% static 'css/bootstrap.min.css' %}"rel="stylesheet" id="bootstrap-css">
+	<link href="{% static 'css/stylecss.css' %}" rel="stylesheet" >
+	<link rel="icon" type="image/png" href="{% static 'media/solar-titlebar.png' %}" />
+	<title>Sales Property Form</title>
 </head>
 <!------ Include the above in your HEAD tag ---------->
 
 <body>
+     {% csrf_token %}
 		<div class="topnav">
-			<img src="Solar-Philippines-Logo.png" class="topnav-logo">
+			<img src="{% static 'media/solarpic.png' %}" class="topnav-logo">
 			<button>Submit</button>
 			<input type="text" placeholder="Search">
 		</div>
 <div class="container">
   <h1>Sale Properties</h1>
-  <form class="form-horizontal" role="form">
+  <form class="form-horizontal" role="form" action="#" method="POST">
     <fieldset>
-      <legend>Location Details</legend>
+      <legend class="form-legend">Location Details</legend>
       <div class="form-group">
         <label class="col-sm-3 control-label">Region</label>
         <div class="col-sm-5">
@@ -46,7 +51,7 @@
     </fieldset>
 	
 	<fieldset>
-      <legend>Property Owner's Details</legend>
+      <legend class="form-legend">Property Owner's Details</legend>
       <div class="form-group">
         <label class="col-sm-3 control-label">Registered Land Owner</label>
         <div class="col-sm-5">
@@ -70,24 +75,24 @@
       
 	  <div class="form-group">
         <label class="col-sm-3 control-label">Contact Number</label>
-        <div class="col-sm-5">
+        <div class="col-sm-3">
           <input type="text" class="form-control" name="contactnumber" id="contactnumber" placeholder="Contact Number">
         </div>
       </div>
     </fieldset>
 	
 	<fieldset>
-      <legend>Property Details</legend>
+      <legend class="form-legend">Property Details</legend>
       <div class="form-group">
         <label class="col-sm-3 control-label">Title Number</label>
-        <div class="col-sm-5">
+        <div class="col-sm-3">
           <input type="text" class="form-control" name="titlenumber" id="titlenumber" placeholder="Title Number">
         </div>
       </div>
 	  
       <div class="form-group">
         <label class="col-sm-3 control-label">Lot Number</label>
-        <div class="col-sm-5">
+        <div class="col-sm-3">
           <input type="text" class="form-control" name="lotnumber" id="lotnumber" placeholder="Lot Number">
         </div>
       </div>
@@ -101,14 +106,14 @@
       
 	  <div class="form-group">
         <label class="col-sm-3 control-label">Survey Number</label>
-        <div class="col-sm-5">
+        <div class="col-sm-3">
           <input type="text" class="form-control" name="surveynumber" id="surveynumber" placeholder="Survey Number">
         </div>
       </div>
     </fieldset>
 	
 	<fieldset>
-      <legend>Payment Details</legend>
+      <legend class="form-legend">Payment Details</legend>
       <div class="form-group">
         <label class="col-sm-3 control-label">Sale Price Per Hectare</label>
         <div class="col-sm-3">
@@ -125,130 +130,130 @@
     </fieldset>
 	
 	<fieldset>
-      <legend>Released Payments</legend>
+      <legend class="form-legend">Released Payments</legend>
       <div class="form-group">
         <label class="col-sm-3 control-label">1st Payment</label>
-        <div class="col-sm-3">
-          <input type="text" class="form-control" name="1stpayment_amount" id="1stpayment_amount" placeholder="Amount Released">
-		  <input type="text" class="form-control" name="1stpayment_date" id="1stpayment_date" placeholder="Date Released">
+        <div class="col-sm-5">
+          <input type="text" class="form-control-amount" name="1stpayment_amount" id="1stpayment_amount" placeholder="Amount Released">
+		  <input type="date" class="form-control-date" name="1stpayment_date" id="1stpayment_date" placeholder="Date Released">
         </div>
       </div>
 	  
 	  <div class="form-group">
         <label class="col-sm-3 control-label">2nd Payment</label>
-        <div class="col-sm-3">
-          <input type="text" class="form-control" name="2ndpayment_amount" id="2ndpayment_amount" placeholder="Amount Released">
-		  <input type="text" class="form-control" name="2ndpayment_date" id="2ndpayment_date" placeholder="Date Released">
+        <div class="col-sm-5">
+          <input type="text" class="form-control-amount" name="2ndpayment_amount" id="2ndpayment_amount" placeholder="Amount Released">
+		  <input type="date" class="form-control-date" name="2ndpayment_date" id="2ndpayment_date" placeholder="Date Released">
         </div>
       </div>
 	  <div class="form-group">
         <label class="col-sm-3 control-label">3rd Payment</label>
-        <div class="col-sm-3">
-          <input type="text" class="form-control" name="3rdpayment_amount" id="3rdpayment_amount" placeholder="Amount Released">
-		  <input type="text" class="form-control" name="3rdpayment_date" id="3rdpayment_date" placeholder="Date Released">
+        <div class="col-sm-5">
+          <input type="text" class="form-control-amount" name="3rdpayment_amount" id="3rdpayment_amount" placeholder="Amount Released">
+		  <input type="date" class="form-control-date" name="3rdpayment_date" id="3rdpayment_date" placeholder="Date Released">
         </div>
       </div>
 	  <div class="form-group">
         <label class="col-sm-3 control-label">4th Payment</label>
-        <div class="col-sm-3">
-          <input type="text" class="form-control" name="4thpayment_amount" id="4thpayment_amount" placeholder="Amount Released">
-		  <input type="text" class="form-control" name="4thpayment_date" id="4thpayment_date" placeholder="Date Released">
+        <div class="col-sm-5">
+          <input type="text" class="form-control-amount" name="4thpayment_amount" id="4thpayment_amount" placeholder="Amount Released">
+		  <input type="date" class="form-control-date" name="4thpayment_date" id="4thpayment_date" placeholder="Date Released">
         </div>
       </div>
 	  <div class="form-group">
         <label class="col-sm-3 control-label">5th Payment</label>
-        <div class="col-sm-3">
-          <input type="text" class="form-control" name="5thpayment_amount" id="5thpayment_amount" placeholder="Amount Released">
-		  <input type="text" class="form-control" name="5thpayment_date" id="5thpayment_date" placeholder="Date Released">
+        <div class="col-sm-5">
+          <input type="text" class="form-control-amount" name="5thpayment_amount" id="5thpayment_amount" placeholder="Amount Released">
+		  <input type="date" class="form-control-date" name="5thpayment_date" id="5thpayment_date" placeholder="Date Released">
         </div>
       </div>
 	  <div class="form-group">
         <label class="col-sm-3 control-label">6th Payment</label>
-        <div class="col-sm-3">
-          <input type="text" class="form-control" name="6thpayment_amount" id="6thpayment_amount" placeholder="Amount Released">
-		  <input type="text" class="form-control" name="6thpayment_date" id="6thpayment_date" placeholder="Date Released">
+        <div class="col-sm-5">
+          <input type="text" class="form-control-amount" name="6thpayment_amount" id="6thpayment_amount" placeholder="Amount Released">
+		  <input type="date" class="form-control-date" name="6thpayment_date" id="6thpayment_date" placeholder="Date Released">
         </div>
       </div>
 	  <div class="form-group">
         <label class="col-sm-3 control-label">7th Payment</label>
-        <div class="col-sm-3">
-          <input type="text" class="form-control" name="7thpayment_amount" id="7thpayment_amount" placeholder="Amount Released">
-		  <input type="text" class="form-control" name="7thpayment_date" id="7thpayment_date" placeholder="Date Released">
+        <div class="col-sm-5">
+          <input type="text" class="form-control-amount" name="7thpayment_amount" id="7thpayment_amount" placeholder="Amount Released">
+		  <input type="date" class="form-control-date" name="7thpayment_date" id="7thpayment_date" placeholder="Date Released">
         </div>
       </div>
 	  <div class="form-group">
         <label class="col-sm-3 control-label">8th Payment</label>
-        <div class="col-sm-3">
-          <input type="text" class="form-control" name="8thpayment_amount" id="8thpayment_amount" placeholder="Amount Released">
-		  <input type="text" class="form-control" name="8thpayment_date" id="8thpayment_date" placeholder="Date Released">
+        <div class="col-sm-5">
+          <input type="text" class="form-control-amount" name="8thpayment_amount" id="8thpayment_amount" placeholder="Amount Released">
+		  <input type="date" class="form-control-date" name="8thpayment_date" id="8thpayment_date" placeholder="Date Released">
         </div>
       </div>
 	  <div class="form-group">
         <label class="col-sm-3 control-label">9th Payment</label>
-        <div class="col-sm-3">
-          <input type="text" class="form-control" name="9thpayment_amount" id="9thpayment_amount" placeholder="Amount Released">
-		  <input type="text" class="form-control" name="9thpayment_date" id="9thpayment_date" placeholder="Date Released">
+        <div class="col-sm-5">
+          <input type="text" class="form-control-amount" name="9thpayment_amount" id="9thpayment_amount" placeholder="Amount Released">
+		  <input type="date" class="form-control-date" name="9thpayment_date" id="9thpayment_date" placeholder="Date Released">
         </div>
       </div>
 	  <div class="form-group">
         <label class="col-sm-3 control-label">10th Payment</label>
-        <div class="col-sm-3">
-          <input type="text" class="form-control" name="10thpayment_amount" id="10thpayment_amount" placeholder="Amount Released">
-		  <input type="text" class="form-control" name="10thpayment_date" id="10thpayment_date" placeholder="Date Released">
+        <div class="col-sm-5">
+          <input type="text" class="form-control-amount" name="10thpayment_amount" id="10thpayment_amount" placeholder="Amount Released">
+		  <input type="date" class="form-control-date" name="10thpayment_date" id="10thpayment_date" placeholder="Date Released">
         </div>
       </div>
     </fieldset>
 	
 	<fieldset>
-      <legend>Taxes and Registration Fees</legend>
+      <legend class="form-legend">Taxes and Registration Fees</legend>
       <div class="form-group">
         <label class="col-sm-3 control-label">CGT</label>
         <div class="col-sm-3">
-          <input type="text" class="form-control" name="cgt_amount" id="cgt_amount" placeholder="Amount Released">
-		  <input type="text" class="form-control" name="cgt_date" id="cgt_date" placeholder="Date Released">
+          <input type="text" class="form-control-amount" name="cgt_amount" id="cgt_amount" placeholder="Amount Released">
+		  
         </div>
       </div>
 	  
 	  <div class="form-group">
         <label class="col-sm-3 control-label">DST</label>
         <div class="col-sm-3">
-          <input type="text" class="form-control" name="dst_amount" id="dst_amount-5_amount" placeholder="Amount Released">
-		  <input type="text" class="form-control" name="dst_date" id="dst_date-5_date" placeholder="Date Released">
+          <input type="text" class="form-control-amount" name="dst_amount" id="dst_amount-5_amount" placeholder="Amount Released">
+		 
         </div>
       </div>
 	  <div class="form-group">
         <label class="col-sm-3 control-label">Trasnfer Fees</label>
         <div class="col-sm-3">
-          <input type="text" class="form-control" name="transferfees_amount" id="y6-transferfees_amount" placeholder="Amount Released">
-		  <input type="text" class="form-control" name="transferfees_date" id="transferfees_date-10_date" placeholder="Date Released">
+          <input type="text" class="form-control-amount" name="transferfees_amount" id="y6-transferfees_amount" placeholder="Amount Released">
+		  
         </div>
       </div>
 	  <div class="form-group">
         <label class="col-sm-3 control-label">LRA Fee</label>
         <div class="col-sm-3">
-          <input type="text" class="form-control" name="lrafee_amount" id="lrafee_amount-15_amount" placeholder="Amount Released">
-		  <input type="text" class="form-control" name="lrafee_date" id="y11lrafee_date15_date" placeholder="Date Released">
+          <input type="text" class="form-control-amount" name="lrafee_amount" id="lrafee_amount-15_amount" placeholder="Amount Released">
+		  
         </div>
       </div>
 	  <div class="form-group">
         <label class="col-sm-3 control-label">I.T Fee</label>
         <div class="col-sm-3">
-          <input type="text" class="form-control" name="itfee_amount" id="y16itfee_amount20_amount" placeholder="Amount Released">
-		  <input type="text" class="form-control" name="itfee_date" id="itfee_date" placeholder="Date Released">
+          <input type="text" class="form-control-amount" name="itfee_amount" id="y16itfee_amount20_amount" placeholder="Amount Released">
+		 
         </div>
       </div>
 	  <div class="form-group">
         <label class="col-sm-3 control-label">LBP</label>
         <div class="col-sm-3">
-          <input type="text" class="form-control" name="lbp_amount" id="y21-lbp_amount" placeholder="Amount Released">
-		  <input type="text" class="form-control" name="lbp_date" id="lbp_date" placeholder="Date Released">
+          <input type="text" class="form-control-amount" name="lbp_amount" id="y21-lbp_amount" placeholder="Amount Released">
+		 
         </div>
       </div>
 	  <div class="form-group">
         <label class="col-sm-3 control-label">Notarial Fee</label>
         <div class="col-sm-3">
-          <input type="text" class="form-control" name="notarialfee_amount" id="y26-notarialfee_amount" placeholder="Amount Released">
-		  <input type="text" class="form-control" name="notarialfee_date" id="notarialfee_date-30_date" placeholder="Date Released">
+          <input type="text" class="form-control-amount" name="notarialfee_amount" id="y26-notarialfee_amount" placeholder="Amount Released">
+		  
         </div>
       </div>
 	  
@@ -256,6 +261,8 @@
 	  
 	  <div class="form-group">
         <div class="col-sm-offset-3 col-sm-9">
+            {% csrf_token %}
+            <input type="hidden" name="addproperty" value="true" required>
           <input type="submit" class="btn btn-success">
         </div>
       </div>
