--- a/DATABASE/SolarDB/templates/stylecss.css
+++ b/DATABASE/SolarDB/templates/stylecss.css
@@ -253,28 +253,45 @@ body.home-main{
 
 
 /***** VIEW TABLE *****/
-.filterable {
-    margin-top: 15px;
+thead{
+  color: white;
+  background-color:  coral;
 }
-.filterable .panel-heading .pull-right {
-    margin-top: -20px;
+
+#myInput {
+  background-image: url('/css/searchicon.png'); /*** not functioning ***/
+  background-position: 10px 10px;
+  background-repeat: no-repeat;
+  width: 250px;
+  font-size: 16px;
+  padding: 12px 20px 12px 40px;
+  border: 1px solid #ddd;
+  margin-bottom: 12px;
 }
-.filterable .filters input[disabled] {
-    background-color: transparent;
-    border: none;
-    cursor: auto;
-    box-shadow: none;
-    padding: 0;
-    height: auto;
+
+#myTable {
+  border-collapse: collapse;
+  width: 100%;
+  border: 1px solid #ddd;
+  font-size: 18px;
+  margin-right: 50px;
+  font-size: 15px;
 }
-.filterable .filters input[disabled]::-webkit-input-placeholder {
-    color: #333;
+
+#myTable th, #myTable td {
+  text-align: center;
+  padding: 12px;
+  border: 1px solid #000;
 }
-.filterable .filters input[disabled]::-moz-placeholder {
-    color: #333;
+
+#myTable tr {
+  border-bottom: 1px solid #ddd;
 }
-.filterable .filters input[disabled]:-ms-input-placeholder {
-    color: #333;
+
+#tr-hover:hover{
+    background-color: #ccc;
 }
+
+
 
 
