--- a/DATABASE/SolarDB/static/css/stylecss.css
+++ b/DATABASE/SolarDB/static/css/stylecss.css
@@ -212,6 +212,7 @@ body.home-main{
 	padding-bottom: 50px;
 	background-color: white;
 	width: 500px;
+    height: 430px;
 	margin-left: 33%;
 	margin-top: 100px;
 	border-style: solid;
