--- a/DATABASE/SolarDB/templates/sales_form.html
+++ b/DATABASE/SolarDB/templates/sales_form.html
@@ -135,7 +135,7 @@
         <label class="col-sm-3 control-label">1st Payment</label>
         <div class="col-sm-5">
           <input type="text" class="form-control-amount" name="1stpayment_amount" id="1stpayment_amount" value = 0>
-		  <input type="date" class="form-control-date" name="1stpayment_date" id="1stpayment_date" placeholder="Date Released">
+		  <input type="text" class="form-control-date" name="1stpayment_date" id="1stpayment_date" placeholder="Date Released">
         </div>
       </div>
 	  
@@ -143,63 +143,63 @@
         <label class="col-sm-3 control-label">2nd Payment</label>
         <div class="col-sm-5">
           <input type="text" class="form-control-amount" name="2ndpayment_amount" id="2ndpayment_amount" value = 0>
-		  <input type="date" class="form-control-date" name="2ndpayment_date" id="2ndpayment_date" value="0001-08-08">
+		  <input type="text" class="form-control-date" name="2ndpayment_date" id="2ndpayment_date"  placeholder="Date Released">
         </div>
       </div>
 	  <div class="form-group">
         <label class="col-sm-3 control-label">3rd Payment</label>
         <div class="col-sm-5">
           <input type="text" class="form-control-amount" name="3rdpayment_amount" id="3rdpayment_amount" value = 0>
-		  <input type="date" class="form-control-date" name="3rdpayment_date" id="3rdpayment_date" value="0001-08-08">
+		  <input type="text" class="form-control-date" name="3rdpayment_date" id="3rdpayment_date" placeholder="Date Released">
         </div>
       </div>
 	  <div class="form-group">
         <label class="col-sm-3 control-label">4th Payment</label>
         <div class="col-sm-5">
           <input type="text" class="form-control-amount" name="4thpayment_amount" id="4thpayment_amount" value = 0>
-		  <input type="date" class="form-control-date" name="4thpayment_date" id="4thpayment_date" value="0001-08-08">
+		  <input type="text" class="form-control-date" name="4thpayment_date" id="4thpayment_date" placeholder="Date Released">
         </div>
       </div>
 	  <div class="form-group">
         <label class="col-sm-3 control-label">5th Payment</label>
         <div class="col-sm-5">
           <input type="text" class="form-control-amount" name="5thpayment_amount" id="5thpayment_amount" value = 0>
-		  <input type="date" class="form-control-date" name="5thpayment_date" id="5thpayment_date" value="0001-08-08">
+		  <input type="text" class="form-control-date" name="5thpayment_date" id="5thpayment_date" placeholder="Date Released">
         </div>
       </div>
 	  <div class="form-group">
         <label class="col-sm-3 control-label">6th Payment</label>
         <div class="col-sm-5">
           <input type="text" class="form-control-amount" name="6thpayment_amount" id="6thpayment_amount" value = 0>
-		  <input type="date" class="form-control-date" name="6thpayment_date" id="6thpayment_date" value="0001-08-08">
+		  <input type="text" class="form-control-date" name="6thpayment_date" id="6thpayment_date" placeholder="Date Released">
         </div>
       </div>
 	  <div class="form-group">
         <label class="col-sm-3 control-label">7th Payment</label>
         <div class="col-sm-5">
           <input type="text" class="form-control-amount" name="7thpayment_amount" id="7thpayment_amount" value = 0>
-		  <input type="date" class="form-control-date" name="7thpayment_date" id="7thpayment_date" value="0001-08-08">
+		  <input type="text" class="form-control-date" name="7thpayment_date" id="7thpayment_date" placeholder="Date Released">
         </div>
       </div>
 	  <div class="form-group">
         <label class="col-sm-3 control-label">8th Payment</label>
         <div class="col-sm-5">
           <input type="text" class="form-control-amount" name="8thpayment_amount" id="8thpayment_amount" value = 0>
-		  <input type="date" class="form-control-date" name="8thpayment_date" id="8thpayment_date" value="0001-08-08">
+		  <input type="text" class="form-control-date" name="8thpayment_date" id="8thpayment_date" placeholder="Date Released">
         </div>
       </div>
 	  <div class="form-group">
         <label class="col-sm-3 control-label">9th Payment</label>
         <div class="col-sm-5">
           <input type="text" class="form-control-amount" name="9thpayment_amount" id="9thpayment_amount" value = 0>
-		  <input type="date" class="form-control-date" name="9thpayment_date" id="9thpayment_date" value="0001-08-08">
+		  <input type="text" class="form-control-date" name="9thpayment_date" id="9thpayment_date" placeholder="Date Released">
         </div>
       </div>
 	  <div class="form-group">
         <label class="col-sm-3 control-label">10th Payment</label>
         <div class="col-sm-5">
           <input type="text" class="form-control-amount" name="10thpayment_amount" id="10thpayment_amount" value = 0>
-		  <input type="date" class="form-control-date" name="10thpayment_date" id="10thpayment_date" value="0001-08-08">
+		  <input type="text" class="form-control-date" name="10thpayment_date" id="10thpayment_date" placeholder="Date Released">
         </div>
       </div>
     </fieldset>
