--- a/DATABASE/SolarDB/static/css/stylecss.css
+++ b/DATABASE/SolarDB/static/css/stylecss.css
@@ -212,7 +212,6 @@ body.home-main{
 	padding-bottom: 50px;
 	background-color: white;
 	width: 500px;
-    height: 430px;
 	margin-left: 33%;
 	margin-top: 100px;
 	border-style: solid;
@@ -254,28 +253,40 @@ body.home-main{
 
 
 /***** VIEW TABLE *****/
-.filterable {
-    margin-top: 15px;
-}
-.filterable .panel-heading .pull-right {
-    margin-top: -20px;
-}
-.filterable .filters input[disabled] {
-    background-color: transparent;
-    border: none;
-    cursor: auto;
-    box-shadow: none;
-    padding: 0;
-    height: auto;
-}
-.filterable .filters input[disabled]::-webkit-input-placeholder {
-    color: #333;
-}
-.filterable .filters input[disabled]::-moz-placeholder {
-    color: #333;
-}
-.filterable .filters input[disabled]:-ms-input-placeholder {
-    color: #333;
+thead{
+  color: white;
+  background-color:  coral;
 }
 
+#myInput {
+  background-image: url('/css/searchicon.png'); /*** not functioning ***/
+  background-position: 10px 10px;
+  background-repeat: no-repeat;
+  width: 250px;
+  font-size: 16px;
+  padding: 12px 20px 12px 40px;
+  border: 1px solid #ddd;
+  margin-bottom: 12px;
+}
 
+#myTable {
+  border-collapse: collapse;
+  width: 100%;
+  border: 1px solid #ddd;
+  font-size: 12px;
+  margin-right: 50px;
+}
+
+#myTable th, #myTable td {
+  text-align: center;
+  padding: 12px;
+  border: 1px solid #000;
+}
+
+#myTable tr {
+  border-bottom: 1px solid #ddd;
+}
+
+#tr-hover:hover{
+    background-color: #ccc;
+}
