--- a/DATABASE/SolarDB/templates/lease_form.html
+++ b/DATABASE/SolarDB/templates/lease_form.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link href="{% static 'css/bootstrap.min.css' %}"rel="stylesheet" id="bootstrap-css">
+	<link href="{% static 'css/bootstrap.min.css' %}"rel="stylesheet">
 	<link href="{% static 'css/stylecss.css' %}" rel="stylesheet" >
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/png" href="{% static 'media/solar-titlebar.png' %}" />
@@ -14,8 +14,6 @@
     {% csrf_token %}
 		<div class="topnav">
 			<img src="{% static 'media/solarpic.png' %}" class="topnav-logo">
-			<button>Submit</button>
-			<input type="text" placeholder="Search">
 		</div>
 <div class="container">
   <h1>Lease Properties</h1>
