--- a/DATABASE/SolarDB/templates/login.html
+++ b/DATABASE/SolarDB/templates/login.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link href="{% static 'css/bootstrap.min.css' %}"rel="stylesheet" id="bootstrap-css">
+	<link href="{% static 'css/bootstrap.min.css' %}"rel="stylesheet">
 	<link href="{% static 'css/stylecss.css' %}" rel="stylesheet" >
     <link rel="icon" type="image/png" href="{% static 'media/solar-titlebar.png' %}" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
