--- a/DATABASE/SolarDB/templates/sales_form.html
+++ b/DATABASE/SolarDB/templates/sales_form.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link href="{% static 'css/bootstrap.min.css' %}"rel="stylesheet" id="bootstrap-css">
+	<link href="{% static 'css/bootstrap.min.css' %}"rel="stylesheet">
 	<link href="{% static 'css/stylecss.css' %}" rel="stylesheet" >
 	<link rel="icon" type="image/png" href="{% static 'media/solar-titlebar.png' %}" />
 	<title>Sales Property Form</title>
@@ -13,8 +13,6 @@
      {% csrf_token %}
 		<div class="topnav">
 			<img src="{% static 'media/solarpic.png' %}" class="topnav-logo">
-			<button>Submit</button>
-			<input type="text" placeholder="Search">
 		</div>
 <div class="container">
   <h1>Sale Properties</h1>
@@ -134,72 +132,72 @@
       <div class="form-group">
         <label class="col-sm-3 control-label">1st Payment</label>
         <div class="col-sm-5">
-          <input type="text" class="form-control-amount" name="1stpayment_amount" id="1stpayment_amount" value = 0>
-		  <input type="text" class="form-control-date" name="1stpayment_date" id="1stpayment_date" placeholder="Date Released">
+          <input type="text" class="form-control-amount" name="1stpayment_amount" id="1stpayment_amount" placeholder="Amount Released">
+		  <input type="date" class="form-control-date" name="1stpayment_date" id="1stpayment_date" placeholder="Date Released">
         </div>
       </div>
 	  
 	  <div class="form-group">
         <label class="col-sm-3 control-label">2nd Payment</label>
         <div class="col-sm-5">
-          <input type="text" class="form-control-amount" name="2ndpayment_amount" id="2ndpayment_amount" value = 0>
-		  <input type="text" class="form-control-date" name="2ndpayment_date" id="2ndpayment_date"  placeholder="Date Released">
+          <input type="text" class="form-control-amount" name="2ndpayment_amount" id="2ndpayment_amount" placeholder="Amount Released">
+		  <input type="date" class="form-control-date" name="2ndpayment_date" id="2ndpayment_date" placeholder="Date Released">
         </div>
       </div>
 	  <div class="form-group">
         <label class="col-sm-3 control-label">3rd Payment</label>
         <div class="col-sm-5">
-          <input type="text" class="form-control-amount" name="3rdpayment_amount" id="3rdpayment_amount" value = 0>
-		  <input type="text" class="form-control-date" name="3rdpayment_date" id="3rdpayment_date" placeholder="Date Released">
+          <input type="text" class="form-control-amount" name="3rdpayment_amount" id="3rdpayment_amount" placeholder="Amount Released">
+		  <input type="date" class="form-control-date" name="3rdpayment_date" id="3rdpayment_date" placeholder="Date Released">
         </div>
       </div>
 	  <div class="form-group">
         <label class="col-sm-3 control-label">4th Payment</label>
         <div class="col-sm-5">
-          <input type="text" class="form-control-amount" name="4thpayment_amount" id="4thpayment_amount" value = 0>
-		  <input type="text" class="form-control-date" name="4thpayment_date" id="4thpayment_date" placeholder="Date Released">
+          <input type="text" class="form-control-amount" name="4thpayment_amount" id="4thpayment_amount" placeholder="Amount Released">
+		  <input type="date" class="form-control-date" name="4thpayment_date" id="4thpayment_date" placeholder="Date Released">
         </div>
       </div>
 	  <div class="form-group">
         <label class="col-sm-3 control-label">5th Payment</label>
         <div class="col-sm-5">
-          <input type="text" class="form-control-amount" name="5thpayment_amount" id="5thpayment_amount" value = 0>
-		  <input type="text" class="form-control-date" name="5thpayment_date" id="5thpayment_date" placeholder="Date Released">
+          <input type="text" class="form-control-amount" name="5thpayment_amount" id="5thpayment_amount" placeholder="Amount Released">
+		  <input type="date" class="form-control-date" name="5thpayment_date" id="5thpayment_date" placeholder="Date Released">
         </div>
       </div>
 	  <div class="form-group">
         <label class="col-sm-3 control-label">6th Payment</label>
         <div class="col-sm-5">
-          <input type="text" class="form-control-amount" name="6thpayment_amount" id="6thpayment_amount" value = 0>
-		  <input type="text" class="form-control-date" name="6thpayment_date" id="6thpayment_date" placeholder="Date Released">
+          <input type="text" class="form-control-amount" name="6thpayment_amount" id="6thpayment_amount" placeholder="Amount Released">
+		  <input type="date" class="form-control-date" name="6thpayment_date" id="6thpayment_date" placeholder="Date Released">
         </div>
       </div>
 	  <div class="form-group">
         <label class="col-sm-3 control-label">7th Payment</label>
         <div class="col-sm-5">
-          <input type="text" class="form-control-amount" name="7thpayment_amount" id="7thpayment_amount" value = 0>
-		  <input type="text" class="form-control-date" name="7thpayment_date" id="7thpayment_date" placeholder="Date Released">
+          <input type="text" class="form-control-amount" name="7thpayment_amount" id="7thpayment_amount" placeholder="Amount Released">
+		  <input type="date" class="form-control-date" name="7thpayment_date" id="7thpayment_date" placeholder="Date Released">
         </div>
       </div>
 	  <div class="form-group">
         <label class="col-sm-3 control-label">8th Payment</label>
         <div class="col-sm-5">
-          <input type="text" class="form-control-amount" name="8thpayment_amount" id="8thpayment_amount" value = 0>
-		  <input type="text" class="form-control-date" name="8thpayment_date" id="8thpayment_date" placeholder="Date Released">
+          <input type="text" class="form-control-amount" name="8thpayment_amount" id="8thpayment_amount" placeholder="Amount Released">
+		  <input type="date" class="form-control-date" name="8thpayment_date" id="8thpayment_date" placeholder="Date Released">
         </div>
       </div>
 	  <div class="form-group">
         <label class="col-sm-3 control-label">9th Payment</label>
         <div class="col-sm-5">
-          <input type="text" class="form-control-amount" name="9thpayment_amount" id="9thpayment_amount" value = 0>
-		  <input type="text" class="form-control-date" name="9thpayment_date" id="9thpayment_date" placeholder="Date Released">
+          <input type="text" class="form-control-amount" name="9thpayment_amount" id="9thpayment_amount" placeholder="Amount Released">
+		  <input type="date" class="form-control-date" name="9thpayment_date" id="9thpayment_date" placeholder="Date Released">
         </div>
       </div>
 	  <div class="form-group">
         <label class="col-sm-3 control-label">10th Payment</label>
         <div class="col-sm-5">
-          <input type="text" class="form-control-amount" name="10thpayment_amount" id="10thpayment_amount" value = 0>
-		  <input type="text" class="form-control-date" name="10thpayment_date" id="10thpayment_date" placeholder="Date Released">
+          <input type="text" class="form-control-amount" name="10thpayment_amount" id="10thpayment_amount" placeholder="Amount Released">
+		  <input type="date" class="form-control-date" name="10thpayment_date" id="10thpayment_date" placeholder="Date Released">
         </div>
       </div>
     </fieldset>
@@ -209,7 +207,7 @@
       <div class="form-group">
         <label class="col-sm-3 control-label">CGT</label>
         <div class="col-sm-3">
-          <input type="text" class="form-control-amount" name="cgt_amount" id="cgt_amount" value = 0>
+          <input type="text" class="form-control-amount" name="cgt_amount" id="cgt_amount" placeholder="Amount Released">
 		  
         </div>
       </div>
@@ -217,42 +215,42 @@
 	  <div class="form-group">
         <label class="col-sm-3 control-label">DST</label>
         <div class="col-sm-3">
-          <input type="text" class="form-control-amount" name="dst_amount" id="dst_amount-5_amount" value = 0>
+          <input type="text" class="form-control-amount" name="dst_amount" id="dst_amount-5_amount" placeholder="Amount Released">
 		 
         </div>
       </div>
 	  <div class="form-group">
         <label class="col-sm-3 control-label">Trasnfer Fees</label>
         <div class="col-sm-3">
-          <input type="text" class="form-control-amount" name="transferfees_amount" id="y6-transferfees_amount" value = 0>
+          <input type="text" class="form-control-amount" name="transferfees_amount" id="y6-transferfees_amount" placeholder="Amount Released">
 		  
         </div>
       </div>
 	  <div class="form-group">
         <label class="col-sm-3 control-label">LRA Fee</label>
         <div class="col-sm-3">
-          <input type="text" class="form-control-amount" name="lrafee_amount" id="lrafee_amount-15_amount" value = 0>
+          <input type="text" class="form-control-amount" name="lrafee_amount" id="lrafee_amount-15_amount" placeholder="Amount Released">
 		  
         </div>
       </div>
 	  <div class="form-group">
         <label class="col-sm-3 control-label">I.T Fee</label>
         <div class="col-sm-3">
-          <input type="text" class="form-control-amount" name="itfee_amount" id="y16itfee_amount20_amount" value = 0>
+          <input type="text" class="form-control-amount" name="itfee_amount" id="y16itfee_amount20_amount" placeholder="Amount Released">
 		 
         </div>
       </div>
 	  <div class="form-group">
         <label class="col-sm-3 control-label">LBP</label>
         <div class="col-sm-3">
-          <input type="text" class="form-control-amount" name="lbp_amount" id="y21-lbp_amount" value = 0>
+          <input type="text" class="form-control-amount" name="lbp_amount" id="y21-lbp_amount" placeholder="Amount Released">
 		 
         </div>
       </div>
 	  <div class="form-group">
         <label class="col-sm-3 control-label">Notarial Fee</label>
         <div class="col-sm-3">
-          <input type="text" class="form-control-amount" name="notarialfee_amount" id="y26-notarialfee_amount" value = 0>
+          <input type="text" class="form-control-amount" name="notarialfee_amount" id="y26-notarialfee_amount" placeholder="Amount Released">
 		  
         </div>
       </div>
