--- a/DATABASE/SolarDB/static/css/stylecss.css
+++ b/DATABASE/SolarDB/static/css/stylecss.css
@@ -290,3 +290,13 @@ thead{
 #tr-hover:hover{
     background-color: #ccc;
 }
+
+
+
+#underLined {
+    text-decoration: underline; 
+    color: black;
+    position: relative;
+    left:72.5px;
+    top: -10px;
+}
