--- a/DATABASE/SolarDB/templates/lease_form.html
+++ b/DATABASE/SolarDB/templates/lease_form.html
@@ -407,7 +407,7 @@
 	  <div class="form-group">
         <div class="col-sm-offset-3 col-sm-9">
             {% csrf_token %}
-            <input type="hidden" name="addproperty" value="true" required>
+            <input type="hidden" name="leaseproperty" value="true" required>
           <input type="submit" class="btn btn-success">
         </div>
       </div>
